--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     implementation 'mysql:mysql-connector-java:8.0.33'
+    implementation 'com.itextpdf:itext7-core:7.2.6'
 }
 
 apply plugin: "com.github.johnrengelman.shadow"
